syntax = "proto3";

package memo.v1;

option go_package = "memo/proto/grpc/memo/v1;note";

service NoteService {
  rpc GetNote(GetNoteRequest) returns (GetNoteResponse);
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse);
  rpc RemoveNote(DeleteNoteRequest) returns (DeleteNoteResponse);
  rpc ReviewNote(ReviewNoteRequest) returns (ReviewNoteResponse);
  rpc DueNotes(DueNotesRequest) returns (DueNotesResponse);
  rpc InitDueNotes(InitDueNotesRequest) returns (MessageResponse);

  rpc GetCard(GetCardRequest) returns (GetCardResponse);
  rpc ReviewCard(ReviewCardRequest) returns (ReviewCardResponse);
}

message InitDueNotesRequest {
  int32 day = 1;
}

message MessageResponse {
  string message = 1;
}

message CreateNoteRequest {
  string orgid = 1;
  string content = 2;
  string type = 3;
}

message CreateNoteResponse {
  string orgid = 1;
}

message GetNoteRequest {
  string  orgid = 1;
}

message GetNoteResponse {
  string orgid = 1;
  string content = 2;
  string type = 3;
}

message DeleteNoteRequest {
  string orgid = 1;
}

message DeleteNoteResponse {
  string result = 1;
}


message ReviewNoteRequest {
  string orgid = 1;
  string  rate  = 2;
}

message ReviewNoteResponse {
  string orgid = 1;
}

message DueNotesRequest {
  int64 day = 1;
}

message DueNotesResponse {
  repeated string orgid = 1;
}

message GetCardRequest {
  string day = 1; // 目前无效,没有使用
}

message GetCardResponse {
  string orgid = 1;
  string type = 2;
  string front = 3;
  string back = 4;
}

message ReviewCardRequest {
  string orgid = 1;
  int32  rate = 2; 
}

message ReviewCardResponse {
  string message = 1;
}


